--- a/capstone/capstone_pyfiles/assets/stylesheet.css
+++ b/capstone/capstone_pyfiles/assets/stylesheet.css
@@ -33,25 +33,52 @@ html {
    padding-right: 1%;
 }
 
-.space {
-   display: inline;
+.banner > div{
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.first-button, .second-button {
+   background-color: rgb(102, 128, 140);
+   margin-bottom: 1%;
 }
 
 .first-button {
-   display: inline;
-   position: relative;
-   left: 30px;
-   width: 200px;
-   height: 200px;
-   background-color: rgb(255,255,255);
+    margin-left: 40%;
+    margin-right: 3%;
 }
 
-.second-button {
-    float: right;
-    background-color: rgb(255,255,255);
+
+#bar_chart {
+   margin-left: 5%;
+   border:1px solid black;
+   position: relative;
+}
+
+#US_map {
+    margin-right: 5%;
+    border:1px solid black;
     position: relative;
-    padding-right: 300px;
-    right: 10px;
+}
+
+.row {
+    background-color: rgb(0,0,0,0);
+}
+
+.containBar {
+    position: relative;
+
+}
+
+.title {
+    position: absolute;
+    bottom: 90%;
+    right: 40%;
+    color: black;
+    padding-left: 1%;
+    padding-right: 1%;
+    font-family: 'Alegreya Sans', sans-serif;
+    font-size: 200%;
 }
 
 .footer {
@@ -59,7 +86,7 @@ html {
    position: absolute;
    left: 0;
    bottom: 0;
-   height: 100px;
+   height: 50px;
    width: 100%;
    overflow: hidden;
 }
@@ -72,15 +99,9 @@ html {
   padding-right: 1%;
 }
 
-#bar_chart {
-   padding-bottom: 10px;
-   padding-top: 10px;
+#spacing {
+    background-color: green;
 }
-
-#US_map {
-   padding-top: 20px;
-}
-
 
 /*
 background-image: linear-gradient(red, yellow);
