--- a/capstone/capstone_pyfiles/assets/stylesheet.css
+++ b/capstone/capstone_pyfiles/assets/stylesheet.css
@@ -1,6 +1,7 @@
 html {
     position: relative;
     min-height: 100%;
+    background-color: rgb(235, 235, 235);
 }
 
 .all {
@@ -64,6 +65,9 @@ html {
     margin-top: 1%;
     border:1px solid black;
     position: relative;
+    padding-right: 3%;
+    padding-left: 3%;
+    background-color: white;
 }
 
 #bar_chart {
@@ -81,11 +85,16 @@ html {
 .containBar {
     position: relative;
 
+
 }
 
 #spacing {
-    background-color: rgb(235,235,235);
-    height: 500px;
+    background-color: white;
+    height: 350px;
+    margin-left: 2.35%;
+    margin-right: 2.35%;
+    margin-top: 1%;
+    border:1px solid black;
 }
 
 .footer {
@@ -101,7 +110,6 @@ html {
 .footer h2{
   float: right;
   font-size: 100%;
-
   font-family: 'Raleway', sans-serif;
   padding-right: 1%;
 }
