--- a/capstone/capstone_pyfiles/assets/stylesheet.css
+++ b/capstone/capstone_pyfiles/assets/stylesheet.css
@@ -116,10 +116,29 @@ html {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
+.containBarData {
+    position: relative;
+    margin-bottom: 10%;
+}
+
+#lsu_math_site {
+    margin-left: -10px;
+    margin-right: -10px;
+    padding: 1px;
+    font-family: 'Alegreya Sans', sans-serif;
+}
+
+#lsu_math_site {
+    background-color: rgb(62, 88, 100);
+    font-color: black;
+}
+
 .footer {
-   background-color: rgb(235,235,235);
-   margin-top: 3%;
-   height: 200px;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;            /* Footer height */
+  margin-top: 100px;
 }
 /*
 .footer h2{
