--- a/capstone/capstone_pyfiles/assets/stylesheet.css
+++ b/capstone/capstone_pyfiles/assets/stylesheet.css
@@ -115,12 +115,12 @@ html {
     border:1px solid black;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
-
+/*
 .containBarData {
     position: relative;
     margin-bottom: 10%;
 }
-
+/*
 #lsu_math_site {
     margin-left: -10px;
     margin-right: -10px;
@@ -132,13 +132,14 @@ html {
     background-color: rgb(62, 88, 100);
     font-color: black;
 }
-
+/*
 .footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 2.5rem;            /* Footer height */
-  margin-top: 100px;
+   background-color: rgb(215, 215, 215);
+   left: 0;
+   bottom: 0;
+   height: 100px;
+   width: 100%;
+   margin: -10px -10px 10px;
 }
 /*
 .footer h2{
