--- a/capstone/capstone_pyfiles/assets/stylesheet.css
+++ b/capstone/capstone_pyfiles/assets/stylesheet.css
@@ -37,6 +37,7 @@ html {
 .banner > div{
     display: inline-block;
     vertical-align: middle;
+    margin-top: 1%;
 }
 
 #usState-submit-button {
@@ -44,22 +45,21 @@ html {
     background-color: rgb(102, 128, 140);
 }
 
-.first-button {
+.first-button, .second-button {
+    float: right;
 
-   background-color: rgb(62, 88, 100);
-   margin-bottom: 2%;
-
+    margin-bottom: 2%;
 }
 
 .second-button {
-    margin-bottom: 2%;
     background-color: white;
     border-radius: 4px;
+    margin-left: 3%;
+    margin-right: 4%;
 }
 
 .first-button {
-    margin-left: 10%;
-    margin-right: 2%;
+    background-color: rgb(62, 88, 100);
 }
 
 .title {
