--- a/capstone/capstone_pyfiles/assets/stylesheet.css
+++ b/capstone/capstone_pyfiles/assets/stylesheet.css
@@ -8,6 +8,11 @@ html {
    background-color: rgb(235, 235, 235);
 }
 
+#testing {
+    background-color: green;
+    padding: 10px;
+}
+
 .banner {
     height: 75px;
     margin: -10px -10px 10px;
