--- a/capstone/capstone_pyfiles/assets/stylesheet.css
+++ b/capstone/capstone_pyfiles/assets/stylesheet.css
@@ -8,16 +8,13 @@ html {
    background-color: rgb(235, 235, 235);
 }
 
-#testing {
-    background-color: green;
-    padding: 10px;
-}
 
 .banner {
     height: 75px;
     margin: -10px -10px 10px;
     background-color: rgb(62, 88, 100);
     border-radius: 2px;
+    margin-bottom: 0%;
 }
 
 .banner h2{
@@ -39,15 +36,30 @@ html {
    padding-right: 2%;
 }
 
+
 .banner > div{
     display: inline-block;
     vertical-align: middle;
+}
 
+
+.f_button, .s_button {
+    margin-bottom: 1.5%;
+}
+
+.f_button {
+    margin-left: 28%;
+}
+
+.s_button {
+    margin-left: 3%;
 }
 
 #usState-submit-button {
+
     margin-left: 10px;
     background-color: rgb(102, 128, 140);
+
 }
 
 .first-button, .second-button {
@@ -80,8 +92,8 @@ html {
 }
 
 #bar_chart, #US_map{
-    margin-top: 1.1%;
-    border:1px solid black;
+    margin-top: 0%;
+    border:1.5px solid black;
     position: relative;
     padding-right: 3%;
     padding-left: 3%;
@@ -91,6 +103,7 @@ html {
 
 #bar_chart {
    margin-left: 5%;
+   margin-top: 0%;
 }
 
 #US_map {
@@ -130,37 +143,11 @@ html {
 }
 
 
-
 /*
-.containBarData {
-    position: relative;
-    margin-bottom: 10%;
+#testing {
+    background-color: green;
+    padding: 10px;
 }
 
-#lsu_math_site {
-    margin-left: -10px;
-    margin-right: -10px;
-    padding: 1px;
-    font-family: 'Alegreya Sans', sans-serif;
-}
-
-#lsu_math_site {
-    background-color: rgb(62, 88, 100);
-    font-color: black;
-}
-
-.footer {
-   background-color: rgb(215, 215, 215);
-   left: 0;
-   bottom: 0;
-   height: 100px;
-   width: 100%;
-   margin: -10px -10px 10px;
-}
-*/
-
-
-
-/*
 background-image: linear-gradient(red, yellow);
 */
