--- a/capstone/capstone_pyfiles/assets/tabs.css
+++ b/capstone/capstone_pyfiles/assets/tabs.css
@@ -2,4 +2,6 @@
     margin-bottom: 1%;
     margin-left: -10px;
     margin-right: -10px;
+    font-size: 200%;
+    font-family: 'Alegreya Sans', sans-serif;
 }
