--- a/capstone/capstone_pyfiles/assets/stylesheet.css
+++ b/capstone/capstone_pyfiles/assets/stylesheet.css
@@ -119,20 +119,30 @@ html {
     position: relative;
 }
 
-#data_table {
-    padding: 0px;
-    margin: 0px;
+.cB {
+    position: relative;
+    margin-top: 3%;
+    margin-left: 1%;
+    margin-right: 1%;
+
 }
 
+#data_table {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border:1.5px solid black;
+    height: 40vh;
+}
+
+/*
 .spacing {
     border:1.5px solid black;
     background-color: white;
-    height: 400px;
     margin-left: 2.35%;
     margin-right: 2.35%;
     margin-top: 2%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
+*/
 
 .footer h2{
   float: right;
