--- a/capstone/capstone_pyfiles/assets/stylesheet.css
+++ b/capstone/capstone_pyfiles/assets/stylesheet.css
@@ -83,7 +83,7 @@ html {
     transform: translateX(-50%) translateY(-50%);
     color: black;
     font-family: 'Alegreya Sans', sans-serif;
-    font-size: 215%;
+    font-size: 175%;
     width: 100%;
 }
 
@@ -104,6 +104,7 @@ html {
     padding-top: 4%;
     background-color: white;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 4px;
 }
 
 #bar_chart {
@@ -135,6 +136,7 @@ html {
     background-color: white;
     margin-left: 1.4%;
     margin-right: 1.4%;
+    border-radius: 4px;
 }
 
 .footer h2{
@@ -143,7 +145,6 @@ html {
   font-family: 'Raleway', sans-serif;
   padding-right: 1%;
 }
-
 
 /*
 #testing {
