--- a/capstone/capstone_pyfiles/assets/tab2.css
+++ b/capstone/capstone_pyfiles/assets/tab2.css
@@ -1,5 +1,13 @@
-#stacked-bar, #donut-graph{
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+#pie-div, #bar-div {
+    background-color: white;
     border:1.5px solid black;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
+
+#pie-div, #bar-div h3 {
+    color: black;
+    font-family: 'Raleway', sans-serif;
+    text-align: center;
+}
+
 
