--- a/capstone/capstone_pyfiles/assets/stylesheet.css
+++ b/capstone/capstone_pyfiles/assets/stylesheet.css
@@ -53,6 +53,21 @@ html {
     vertical-align: center;
 }
 
+#usState-submit-button {
+
+    margin-left: 10px;
+    background-color: rgb(102, 128, 140);
+
+}
+
+.footer h2{
+  float: right;
+  font-size: 100%;
+  font-family: 'Raleway', sans-serif;
+  padding-right: 1%;
+}
+
+
 /*
 .f_button, .s_button {
     margin-top: 1.3vh;
@@ -67,6 +82,8 @@ html {
     margin-left: 3%;
 }
 */
+
+/*
 #usState-submit-button {
 
     margin-left: 10px;
@@ -93,7 +110,7 @@ html {
     background-color: green;
     */
 }
-
+/*
 #bar_chart, #US_map{
     height: 40vh;
     margin-top: 0%;
@@ -135,13 +152,7 @@ html {
     margin-left: 1.4%;
     margin-right: 1.4%;
 }
-
-.footer h2{
-  float: right;
-  font-size: 100%;
-  font-family: 'Raleway', sans-serif;
-  padding-right: 1%;
-}
+*/
 
 
 /*
