--- a/capstone/capstone_pyfiles/assets/stylesheet.css
+++ b/capstone/capstone_pyfiles/assets/stylesheet.css
@@ -35,7 +35,7 @@ html {
    padding-right: 2vh;
 }
 
-.submit-container {
+#submit-container {
     display: flex;
     float: right;
     margin-top: 1.7vh;
