--- a/capstone/capstone_pyfiles/assets/tab1.css
+++ b/capstone/capstone_pyfiles/assets/tab1.css
@@ -2,6 +2,7 @@
     background-color: white;
     border:1.5px solid black;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    padding-top: 2vh;
 }
 
 #barchart-div,#map-div,#table-div h3 {
@@ -24,3 +25,9 @@
 #tab1-graphs {
     margin-top: 2.5vh;
 }
+
+
+h3 {
+    font-size: 3vh;
+}
+
