--- a/capstone/capstone_pyfiles/assets/stylesheet.css
+++ b/capstone/capstone_pyfiles/assets/stylesheet.css
@@ -20,8 +20,8 @@ html {
     text-align: center;
     color: white;
     margin-left: 2%;
-    padding-top: 2px;
-    font-size: 250%;
+    margin-top: 2px;
+    font-size: 500%;
     display: inline-block;
     font-family: 'Alegreya Sans', sans-serif;
 
@@ -43,7 +43,7 @@ html {
 }
 
 #img_in_flex {
-    height: 3.7vh;
+    height: 3.0vh;
 }
 
 
