--- a/capstone/capstone_pyfiles/assets/tab1.css
+++ b/capstone/capstone_pyfiles/assets/tab1.css
@@ -10,7 +10,6 @@
     font-family: 'Raleway', sans-serif;
     text-align: center;
     padding-bottom: 0%;
-    margin-bottom: 0%;
 }
 
 
@@ -24,8 +23,13 @@
 
 #tab1-graphs {
     margin-top: 2.5vh;
+    margin-bottom: 2.5vh;
 }
 
+
+#tab1-graphs h3 {
+    margin-bottom: 1.5vh;
+}
 
 h3 {
     font-size: 3vh;
