added text to tab3

--- a/capstone/capstone_pyfiles/assets/tab3.css
+++ b/capstone/capstone_pyfiles/assets/tab3.css
@@ -44,3 +44,13 @@
     font-size: 1vh;
     height: 3vh;
 }
+
+#about-sub {
+    text-align: center;
+}
+
+#gh_logo {
+    height: auto;
+    width: 10vh;
+    margin-top: 2vh;
+}
