--- a/capstone/capstone_pyfiles/assets/stylesheet.css
+++ b/capstone/capstone_pyfiles/assets/stylesheet.css
@@ -9,29 +9,29 @@ html {
 }
 
 .banner {
-    height: 7vh;
-    margin: -10px -10px 10px;
+    height: 10rem;
     background-color: rgb(62, 88, 100);
     border-radius: 2px;
     margin-bottom: 0%;
 }
 
-.banner h2{
-    font-family: 'Alegreya Sans', sans-serif;
-    color: white;
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
+.title-container {
+    display: inline-flex;
     align-items: center;
     justify-content: center;
-    float: left;
-    margin: auto;
-    font-size: 3.5vh;
-    text-align: center;
-    margin-left: 3vh;
-    margin-top: 1.75vh;
+    height: 100%;
+    padding: 0;
+    margin-left: 2vh;
+
+
+}
+
+.title-container H2{
+    font-family: 'Raleway', sans-serif;
+    color: white;
+    font-size: 4vh;
+    align-items: center;
+    justify-content: center;
 
 }
 
@@ -51,7 +51,7 @@ html {
 }
 
 #img_in_flex {
-    height: 3.0vh;
+    height: 6vh;
 }
 
 
