--- a/capstone/capstone_pyfiles/assets/tab3.css
+++ b/capstone/capstone_pyfiles/assets/tab3.css
@@ -30,6 +30,11 @@
 
 #second-title {
     text-align: center;
+    font-size: 4vh;
+}
+
+#third-title {
+font-size: 4vh;
 }
 
 #card-container {
@@ -41,8 +46,9 @@
     background-color: rgb(36,160,237);
     border-radius: 5px;
     color: white;
-    font-size: 1vh;
-    height: 3vh;
+    font-size: 1.5vh;
+    height: 4vh;
+
 }
 
 #about-sub {
